ProjetFa derniere Modif

--- a/vues/formulaireReservation.html
+++ b/vues/formulaireReservation.html
@@ -1,11 +1,9 @@
 <section>
   <div class="margeFormulaire">
     <div>
-      <p style="margin-bottom: 10px">
+      <p style="margin-bottom: 10px; font-size: 14px;">
         Plongez au cœur de l'histoire galo-romaine lors d'une journée
         exceptionnelle ! <br />
-        Explorez des cités antiques, vivez des reconstitutions spectaculaires,
-        et dégustez des mets d'époque. <br />
         Réservez votre billet dès maintenant pour une expérience immersive
         inoubliable !
       </p>
@@ -152,16 +150,10 @@
           </div>
 
         </div>
-        <button type="submit" class="btn btn-primary" style="float: right; margin-top: 10px;">
+        <button type="submit" class="btn btn-primary" style="float: right; margin-top: 10px; padding: 10px; font-size: 16px; border-radius: 15px;">
           Réserver
         </button>
       </form>
     </div>
-    <p style="margin-top: 100px">
-      N'attendez plus ! Réservez dès maintenant et préparez-vous à vivre une
-      aventure temporelle captivante qui restera gravée dans votre mémoire pour
-      toujours. La magie de l'histoire vous attend, réservez votre billet dès
-      aujourd'hui !
-    </p>
   </div>
 </section>
