--- a/vues/erreurLimitation.html
+++ b/vues/erreurLimitation.html
@@ -2,8 +2,8 @@
     <div class="GestionErreur">
         <img src="https://cdn.pixabay.com/photo/2019/09/16/18/54/panel-4481756_1280.png" alt="Warning" height="50"
             width="50">
-        <h1>Attention! le nombre d'enfants ou le nombre d'adultes ne doivent pas dépasser 10.</h1>
-        <p>Suite à l'affleunce des visiteurs, nous avons décidés de limiter les nombres de places. </p>
+            <h1>Attention ! Le nombre d'enfants ne doit pas dépasser 10 et le nombre d'adultes ne doit pas dépasser 5.</h1>
+            <p>Suite à l'affleunce des visiteurs, nous avons décidés de limiter les nombres de places. </p>
             <p>Merci pour votre compéhension.</p>
         <p>L'équipe Fâ</p>
         <a href="index.php?controleur=reservation&action=reserver">
